log
vi., 13 de may. de 2022 16:52:50: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
f9615d1
vi., 13 de may. de 2022 17:12:13: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:11: error: unused variable 'j' [-Werror=unused-variable]
    int i, j;
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
2d4b3de
vi., 13 de may. de 2022 17:12:19: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
b35c37f
vi., 13 de may. de 2022 17:26:57: 
 sudoku.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:9: error: unused variable 'repe' [-Werror=unused-variable]
    int* repe = (int*) calloc (10, sizeof(int));
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7125f24
